<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_launcher"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/back"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="com.google.android.gms.samples.vision.ocrreader.LauncherActivity">

    <LinearLayout
        android:layout_width="366dp"
        android:layout_height="379dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageButton
            android:id="@+id/cameraButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@drawable/cam1" />

        <TextView
            android:id="@+id/cameraText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="40dp"
            android:text="@string/detect_banknote"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/galleryButton"
            android:layout_width="100dp"
            android:layout_height="100dp"
            android:background="@android:drawable/ic_menu_gallery" />

        <TextView
            android:id="@+id/galleryText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/select_from_gallery"
            android:textSize="14sp" />

        <ImageButton
            android:id="@+id/aboutButton"
            android:layout_width="55dp"
            android:layout_height="56dp"
            android:background="@drawable/info2" />

        <TextView
            android:id="@+id/aboutText"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="30dp"
            android:text="@string/info"
            android:textSize="14sp" />

    </LinearLayout>

</RelativeLayout>
